编辑器交互与界面一致性修正；新增存档数据管理；Keyframe 合并 MultiKeyframe
- 视口接管时先消费飞行按键（空格不再被播放快捷键抢走，Ctrl 加速真正生效），接管中右键放行到视口菜单
- 非贝塞尔节点不再命中控制点；自动平滑开关打开时立即把出切线对齐到入切线
- 路径编辑器补独立布局持久化；路径来源的世界内查看去掉播放控制；读取路径模式动画时询问路径来源
- 抽出 BrowserScreen / StorageDataScreen 骨架，统一本地与存档浏览界面，并新增 StorageManagerScreen（查看/删除/建文件夹）与存档删除接口
- 路径面板节点行改为下拉选择器；统一各界面按钮高度与面板行右侧对齐
- Keyframe 由接口改为可变类并删除 MultiKeyframe；同步阅读手册与语言键
- 顺带清理未使用导入与冗余代码，改用 Math.clamp、List 新 API